syntax = "proto3";
package product;
option go_package = "ms.api/protos/pb/productService";

// Import types
import "types.proto";

message SuccessResponse {
  string message = 1;
}

message CreateAccountRequest {
  string personId = 1;
  string currency = 2;
}

message GetAccountRequest {
  string personId = 1;
}

message GetAccountResponse {
  types.Account primaryAccount = 1;
  repeated types.Account accounts = 2;
}

service ProductService{
  rpc CreateAccount(CreateAccountRequest) returns (types.Response) {}
  rpc GetAccounts(GetAccountRequest) returns (GetAccountResponse) {}
}
