syntax = "proto3";

package verification;

import "types.proto";
import "google/protobuf/timestamp.proto";
option go_package = "protos/pb/verification";

message RequestOTPRequest {
  enum DeliveryMode {
    EMAIL = 0;
    SMS = 1;
    PUSH = 2;
  }
  DeliveryMode type = 1;
  string target = 2;
}

message VerifyOTPRequest {
  string target = 1;
  string otp_token = 2;
}

service VerificationService {
  rpc RequestOTP(RequestOTPRequest) returns (types.DefaultResponse);
  rpc VerifyOTP(VerifyOTPRequest) returns (types.DefaultResponse);
}